<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/permission_title"
        android:text="@string/location_services"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/permission_description"
        android:text="@string/location_services_description"
        android:gravity="center"
        android:layout_width="280dp"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/permission_button"
            tools:hint="@string/allow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</LinearLayout>